--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by Ben Senica. It uses data from mapbox.com and weathernet.com</p>
             <img class="portrait" src="/img/robot.png">
         </div>
         {{>footer}}
